# BTP_HIGHT

ayush/HIGHT/: .gitignore  README.md  create_test_set.py  finetune_logs  pkl_to_csv.py  pyproject.toml  temp_inspect_pickle.py
ayush/HIGHT/GPM-main/config/: main.yaml
ayush/HIGHT/llava/eval/: model_molcap.py
ayush/HIGHT/llava/model/: llava_graph_arch.py
ayush/HIGHT/llava/serve/: cli_graph.py
ayush/HIGHT/llava/train/: train_drug.py
ayush/HIGHT/scripts/: finetune.sh  merge_lora_weights.py  pretrain.sh
ayush/HIGHT_2/: COMPLEXITY_ANALYSIS.md  README.md  TIMING_INSTRUMENTATION_SUMMARY.md  arpit.txt  create_test_set.py  eval_property_pred_output.logs  pkl_to_csv.py  pretrain.logs  pyproject.toml  requirements.txt  temp_inspect_pickle.py  test_sample.json
ayush/HIGHT_2/GPM-main/data/: README.md
ayush/HIGHT_2/eval_result/: gpm-property_pred-10ep.jsonl  test_output.jsonl
ayush/HIGHT_2/llava/: conversation.py  functional_groups.txt
ayush/HIGHT_2/llava/datasets/: MoleculeNet_classification_dataset.py  collators.py  data_utils.py  forward_pred_dataset.py  lazy_supervised_dataset.py  preprocess.py  property_pred_dataset.py  reagent_pred_dataset.py  retrosynthesis_dataset.py  smiles2graph.py
ayush/HIGHT_2/llava/eval/: eval_molcap.py
ayush/HIGHT_2/llava/model/: builder.py  llava_graph_arch.py
ayush/HIGHT_2/llava/train/: train_drug.py  train_drug_xformers.py  train_mem.py
ayush/HIGHT_2/results/: eval_commands.txt  results.txt
ayush/HIGHT_2/scripts/: eval_property_pred(old).sh  eval_property_pred.sh  finetune.sh  preprocess_bace.py  pretrain.sh
(+66 files in other folders)
